import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

message MsgTokenizeShares {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  required string                   delegator_address     = 1 [(gogoproto.moretags) = "yaml:\"delegator_address\""];
  required string                   validator_address     = 2 [(gogoproto.moretags) = "yaml:\"validator_address\""];
  required cosmos.base.v1beta1.Coin amount                = 3 [(gogoproto.nullable) = false];
  required string                   tokenized_share_owner = 4;
}